ajout d'affichage depuis la liste de tweets

--- a/TP1/TP1/MainPage.xaml
+++ b/TP1/TP1/MainPage.xaml
@@ -5,7 +5,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              
              xmlns:local="clr-namespace:TP1;assembly=TP1"
-             
+             xmlns:Views="clr-namespace:TP1.Views"
              mc:Ignorable="d"
              x:Class="TP1.MainPage">
     <StackLayout Spacing="0">
@@ -27,155 +27,22 @@
             <Entry Placeholder="Identifiant Twitter" BackgroundColor="DarkOliveGreen" x:Name="id"/>
             <Entry Placeholder="Mot de passe" IsPassword="True" BackgroundColor="DarkOliveGreen" x:Name="password"/>
             <StackLayout Orientation="Horizontal">
-            <Switch x:Name="memo"/>
+                <Switch x:Name="memo"/>
                 <Label Text="Mémoriser les informations" TextColor="Gray"/>
             </StackLayout>
             <Button Text="Se Connecter" HorizontalOptions="FillAndExpand" x:Name="connection"/>
-            
+
             <!-- Message d'erreur -->
             <Label Text="erreur" TextColor="White" BackgroundColor="Red" x:Name="error" IsVisible="false"/>
 
         </StackLayout>
         <!--Tweet-->
         <ScrollView HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" BackgroundColor="Tomato" x:Name="scroll" IsVisible="false">
-            <StackLayout Orientation="Vertical" Padding="20">
-                <StackLayout Orientation="Horizontal">
-                    <Image Source="https://picsum.photos/50/50/?random" WidthRequest="75"/>
-
-                    <StackLayout Orientation="Vertical">
-                        <StackLayout Orientation="Horizontal">
-                            <Label Text="Auteur" HorizontalOptions="StartAndExpand"
-                                   VerticalOptions="EndAndExpand"/>
-                            <Label Text="Identifiant" HorizontalOptions="StartAndExpand"
-                                   VerticalOptions="EndAndExpand"/>
-                            <Label Text="Date du post" HorizontalOptions="EndAndExpand"
-                                   VerticalOptions="EndAndExpand"/>
-                        </StackLayout>
-
-                        <StackLayout Orientation="Horizontal" >
-                            <Label FontFamily="Lobster-Regular" Text="Créer une carte comportant trois zones qui se suivent verticalement : une première
-                                        zone avec le contenu du tweet, une deuxième avec trois textes (Répondre, Retweet et
-                                        Favoris) et une dernière qui représente une fine barre grise de séparation."/>
-                        </StackLayout>
-                    </StackLayout>
-                
-                </StackLayout>
-                <StackLayout Orientation="Horizontal">
-                    <Image Source="https://picsum.photos/50/50/?random" WidthRequest="75"/>
-
-                    <StackLayout Orientation="Vertical">
-                        <StackLayout Orientation="Horizontal">
-                            <Label Text="Auteur" HorizontalOptions="StartAndExpand"
-                                   VerticalOptions="EndAndExpand"/>
-                            <Label Text="Identifiant" HorizontalOptions="StartAndExpand"
-                                   VerticalOptions="EndAndExpand"/>
-                            <Label Text="Date du post" HorizontalOptions="EndAndExpand"
-                                   VerticalOptions="EndAndExpand"/>
-                        </StackLayout>
-
-                        <StackLayout Orientation="Horizontal" >
-                            <Label FontFamily="Lobster-Regular" Text="Créer une carte comportant trois zones qui se suivent verticalement : une première
-                                        zone avec le contenu du tweet, une deuxième avec trois textes (Répondre, Retweet et
-                                        Favoris) et une dernière qui représente une fine barre grise de séparation."/>
-                        </StackLayout>
-                    </StackLayout>
-
-                </StackLayout>
-                <StackLayout Orientation="Horizontal">
-                    <Image Source="https://picsum.photos/50/50/?random" WidthRequest="75"/>
-
-                    <StackLayout Orientation="Vertical">
-                        <StackLayout Orientation="Horizontal">
-                            <Label Text="Auteur" HorizontalOptions="StartAndExpand"
-                                   VerticalOptions="EndAndExpand"/>
-                            <Label Text="Identifiant" HorizontalOptions="StartAndExpand"
-                                   VerticalOptions="EndAndExpand"/>
-                            <Label Text="Date du post" HorizontalOptions="EndAndExpand"
-                                   VerticalOptions="EndAndExpand"/>
-                        </StackLayout>
-
-                        <StackLayout Orientation="Horizontal" >
-                            <Label FontFamily="Lobster-Regular" Text="Créer une carte comportant trois zones qui se suivent verticalement : une première
-                                        zone avec le contenu du tweet, une deuxième avec trois textes (Répondre, Retweet et
-                                        Favoris) et une dernière qui représente une fine barre grise de séparation."/>
-                        </StackLayout>
-                    </StackLayout>
-
-                </StackLayout>
-                <StackLayout Orientation="Horizontal">
-                    <Image Source="https://picsum.photos/50/50/?random" WidthRequest="75"/>
-
-                    <StackLayout Orientation="Vertical">
-                        <StackLayout Orientation="Horizontal">
-                            <Label Text="Auteur" HorizontalOptions="StartAndExpand"
-                                   VerticalOptions="EndAndExpand"/>
-                            <Label Text="Identifiant" HorizontalOptions="StartAndExpand"
-                                   VerticalOptions="EndAndExpand"/>
-                            <Label Text="Date du post" HorizontalOptions="EndAndExpand"
-                                   VerticalOptions="EndAndExpand"/>
-                        </StackLayout>
-
-                        <StackLayout Orientation="Horizontal" >
-                            <Label FontFamily="Lobster-Regular" Text="Créer une carte comportant trois zones qui se suivent verticalement : une première
-                                        zone avec le contenu du tweet, une deuxième avec trois textes (Répondre, Retweet et
-                                        Favoris) et une dernière qui représente une fine barre grise de séparation."/>
-                        </StackLayout>
-                    </StackLayout>
-
-                </StackLayout>
-                <StackLayout Orientation="Horizontal">
-                    <Image Source="https://picsum.photos/50/50/?random" WidthRequest="75"/>
-
-                    <StackLayout Orientation="Vertical">
-                        <StackLayout Orientation="Horizontal">
-                            <Label Text="Auteur" HorizontalOptions="StartAndExpand"
-                                   VerticalOptions="EndAndExpand"/>
-                            <Label Text="Identifiant" HorizontalOptions="StartAndExpand"
-                                   VerticalOptions="EndAndExpand"/>
-                            <Label Text="Date du post" HorizontalOptions="EndAndExpand"
-                                   VerticalOptions="EndAndExpand"/>
-                        </StackLayout>
-
-                        <StackLayout Orientation="Horizontal" >
-                            <Label FontFamily="Lobster-Regular" Text="Créer une carte comportant trois zones qui se suivent verticalement : une première
-                                        zone avec le contenu du tweet, une deuxième avec trois textes (Répondre, Retweet et
-                                        Favoris) et une dernière qui représente une fine barre grise de séparation."/>
-                        </StackLayout>
-                    </StackLayout>
-
-                </StackLayout>
-                <StackLayout Orientation="Horizontal">
-                    <Image Source="https://picsum.photos/50/50/?random" WidthRequest="75"/>
-
-                    <StackLayout Orientation="Vertical">
-                        <StackLayout Orientation="Horizontal">
-                            <Label Text="Auteur" HorizontalOptions="StartAndExpand"
-                                   VerticalOptions="EndAndExpand"/>
-                            <Label Text="Identifiant" HorizontalOptions="StartAndExpand"
-                                   VerticalOptions="EndAndExpand"/>
-                            <Label Text="Date du post" HorizontalOptions="EndAndExpand"
-                                   VerticalOptions="EndAndExpand"/>
-                        </StackLayout>
-
-                        <StackLayout Orientation="Horizontal" >
-                            <Label FontFamily="Lobster-Regular" Text="Créer une carte comportant trois zones qui se suivent verticalement : une première
-                                        zone avec le contenu du tweet, une deuxième avec trois textes (Répondre, Retweet et
-                                        Favoris) et une dernière qui représente une fine barre grise de séparation."/>
-                        </StackLayout>
-                    </StackLayout>
-
-                </StackLayout>
-                <StackLayout Orientation="Horizontal" Padding="10">
-                    <ImageButton Source="{local:ImageResource TP1.images.reply.png}" WidthRequest="25" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand"/>
-                    <ImageButton Source="{local:ImageResource TP1.images.retweet.png}" WidthRequest="25" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand"/>
-                    <ImageButton Source="{local:ImageResource TP1.images.favorite.png}" WidthRequest="25" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand"/>
-                </StackLayout>
-                <StackLayout BackgroundColor="#9e9e9e" HeightRequest="1" Margin="20"/>
-
+            <StackLayout x:Name="StacklayoutTweets" Spacing="0">
+                <Views:TweetView/>
             </StackLayout>
-
         </ScrollView>
-        
+
         <!--Barre du bas-->
         <StackLayout HeightRequest="75" 
                      Orientation="Horizontal"
